 [build-system]
 requires = ["setuptools>=68", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "mei-threads"
 version = "0.1.0"
 description = "Threads post generator + poster CLI for Mei"
 readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
   "anthropic>=0.40.0",
   "requests>=2.31.0",
   "python-dotenv>=1.0.0",
   "rich>=13.0.0",
   "platformdirs>=4.2.0",
 ]
 
 [project.scripts]
 mei-threads = "mei_threads.cli:main"
 
 [tool.setuptools]
 include-package-data = true
 
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["mei_threads*"]
